--- a/github_action/src/main/docker/Dockerfile.jvm
+++ b/github_action/src/main/docker/Dockerfile.jvm
@@ -25,11 +25,10 @@ COPY --chown=185 target/quarkus-app/lib/ /deployments/lib/
 COPY --chown=185 target/quarkus-app/*.jar /deployments/
 COPY --chown=185 target/quarkus-app/app/ /deployments/app/
 COPY --chown=185 target/quarkus-app/quarkus/ /deployments/quarkus/
-
+RUN chmod +x /
 RUN echo ${JAVA_HOME}
 RUN bash java -version
 RUN mvn -version
-EXPOSE 8080
 USER 185
 
 ENTRYPOINT [ "java -jar ", JAVA_APP_JAR]
