--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,13 +32,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
       - name: Build and push Docker image
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-        with:
-          context: ./github_action
-          file: ./github_action/src/main/docker/Dockerfile.jvm
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+        run: cd github_action  && mvn package -Dquarkus.container-image.build=true 
       - name: check lock file
         uses: docker://ghcr.io/chains-project/maven-lockfile:dev
         with:
