--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,7 +32,10 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
       - name: Build and push Docker image
-        run: cd github_action  && mvn package -Dquarkus.container-image.build=true 
+        run: cd github_action  && mvn package -Dquarkus.container-image.build=true -Dquarkus.container-image.push=true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+
       - name: check lock file
         uses: docker://ghcr.io/chains-project/maven-lockfile:dev
         with:
