--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -35,11 +35,22 @@ jobs:
         run: cd github_action  && mvn package -Dquarkus.container-image.build=true -Dquarkus.container-image.push=true -Dquarkus.container-image.group=chains-project -Dquarkus.container-image.registry=${{ env.REGISTRY }} -Dquarkus.container-image.name=maven-lockfile
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
-      - name: get version
-        run: echo "VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout | sed 's/-SNAPSHOT//')" >> $GITHUB_ENV
-      - name: check lock file with current version
-        uses: docker://ghcr.io/chains-project/maven-lockfile:$VERSION
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+
+  check-lockfile:
+        runs-on: ubuntu-latest
+        needs: build-and-publish
+        steps:
+        - uses: actions/checkout@v3
+        - name: Set up JDK 11
+          uses: actions/setup-java@v3
+          with:
+            java-version: '11'
+            distribution: 'temurin'
+        - name: get version
+          run: echo "VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout | sed 's/-SNAPSHOT//')" >> $GITHUB_ENV
+        - name: check lock file with current version
+          uses: docker://ghcr.io/chains-project/maven-lockfile:$VERSION
+          with:
+            github-token: ${{ secrets.GITHUB_TOKEN }}
 
 
