--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -37,12 +37,8 @@ jobs:
           context: ./github_action
           file: ./github_action/src/main/docker/Dockerfile.jvm
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ steps.meta.outputs.tags }}, "latest"
           labels: ${{ steps.meta.outputs.labels }}
-      - name: check lock file
-        uses: docker://ghcr.io/chains-project/maven-lockfile:dev
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
 
   check-lockfile:
         runs-on: ubuntu-latest
