--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -30,14 +30,15 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}   
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: ./github_action
           file: ./github_action/src/main/docker/Dockerfile.jvm
           push: true
-          tags: ${{ steps.meta.outputs.tags }}, latest
+          tags: latest
+          # tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
   check-lockfile:
