--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -37,8 +37,7 @@ jobs:
           context: ./github_action
           file: ./github_action/src/main/docker/Dockerfile.jvm
           push: true
-          tags: latest
-          # tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
   check-lockfile:
@@ -52,7 +51,7 @@ jobs:
             java-version: '11'
             distribution: 'temurin'
         - name: pull image with current version from maven 
-          uses: docker://ghcr.io/chains-project/maven-lockfile
+          uses: docker://ghcr.io/chains-project/maven-lockfile:dev
           with:
             github-token: ${{ secrets.GITHUB_TOKEN }}
 
