--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -37,8 +37,8 @@ jobs:
           with:
             java-version: '11'
             distribution: 'temurin'
-        - name: pull image with current version from maven 
-          uses: docker://ghcr.io/chains-project/maven-lockfile:dev
+        - name: run maven-lockfile
+          uses: chains-project/maven-lockfile@dev
           with:
             github-token: ${{ secrets.GITHUB_TOKEN }}
 
