--- a/github_action/src/main/resources/application.properties
+++ b/github_action/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 quarkus.jib.base-jvm-image=maven:latest
 quarkus.jib.jvm-entrypoint=java,-jar,/home/jboss/quarkus-run.jar
+quarkus.log.level=SEVERE
+quarkus.banner.enabled=false
+quarkus.package.type=uber-jar
+quarkus.package.add-runner-suffix=false
