--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -28,3 +28,4 @@ jobs:
       env:
         JBANG_REPO: /root/.jbang/repository
         GITHUB_TOKEN: $
+        WORKING_DIRECTORY: ${{ env.working-directory }}
