--- a/github_action/pom.xml
+++ b/github_action/pom.xml
@@ -5,6 +5,7 @@
     <groupId>io.github.chains-project</groupId>
     <artifactId>maven-lockfile-parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../</relativePath>
   </parent>
   <groupId>io.github.chains_project.maven_lockfile</groupId>
   <artifactId>maven_lockfile_action</artifactId>
