--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -1,9 +1,13 @@
 on:
   workflow_dispatch:
   pull_request:
-
+env:
+  working-directory: ./maven_plugin
 jobs:
   jbang:
+    defaults:
+      run:
+        working-directory: ${{ env.working-directory }}
     runs-on: ubuntu-latest
     name: smoke test against different repos
     steps:
@@ -17,13 +21,11 @@ jobs:
             $-jbang-
     - name: Set up Maven
       run: sudo apt install maven
-    - name: where is maven?
-      run: mvn wrapper:wrapper
     - name: jbang
       uses: jbangdev/jbang-action@v0.105.2
       with:
         script: ".github/smoketest/SmokeTest.java"
-        scriptargs: "my world"
       env:
         JBANG_REPO: /root/.jbang/repository
         GITHUB_TOKEN: $
+        WORKING_DIRECTORY: ${{ env.working-directory }}
