--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,10 @@ inputs:
 runs:
   using: "composite" 
   steps:
-    - uses: actions/checkout@v3
+    - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
