--- a/maven_plugin/pom.xml
+++ b/maven_plugin/pom.xml
@@ -42,8 +42,7 @@
     <url>https://github.com/chains-project/maven-lockfile.git</url>
   </scm>
   <properties>
-    <mavenVersion>
-      3.2.5</mavenVersion>
+    <mavenVersion>3.2.5</mavenVersion>
     <maven.compiler.target>11</maven.compiler.target>
     <maven.compiler.source>11</maven.compiler.source>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -167,8 +166,7 @@
         <version>3.8.1</version>
         <configuration>
           <!-- see http://jira.codehaus.org/browse/MNG-5346 -->
-          <skipErrorNoDescriptorsFound>
-            true</skipErrorNoDescriptorsFound>
+          <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
         </configuration>
         <executions>
           <execution>
@@ -215,8 +213,7 @@
                ! currently needed to run integration tests.
               -->
           <systemProperties>
-            <maven.version>
-              ${maven.version}</maven.version>
+            <maven.version>${maven.version}</maven.version>
             <maven.home>${maven.home}</maven.home>
           </systemProperties>
           <properties>
@@ -254,8 +251,7 @@
                   <goal>jar</goal>
                 </goals>
                 <configuration>
-                  <attach>
-                    true</attach>
+                  <attach>true</attach>
                 </configuration>
               </execution>
             </executions>
@@ -271,8 +267,7 @@
                   <goal>jar</goal>
                 </goals>
                 <configuration>
-                  <attach>
-                    true</attach>
+                  <attach>true</attach>
                 </configuration>
               </execution>
             </executions>
