--- a/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/singleDependency/pom.xml
+++ b/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/singleDependency/pom.xml
@@ -22,7 +22,7 @@
       <plugin>
         <groupId>io.github.chains-project</groupId>
         <artifactId>
-          integrity-maven-plugin</artifactId>
+          maven-lockfile</artifactId>
         <version>@project.version@</version>
         <executions>
           <execution>
