💄 Add appending changelog

--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -23,6 +23,8 @@ release:
       formatted: ALWAYS
       preset: 'gitmoji'
       format: '- {{commitShortHash}} {{commitTitle}}'
+      append: 
+        enabled: true
 
 signing:
   active: ALWAYS
