--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,36 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.github.chains-project</groupId>
   <artifactId>maven-lockfile-parent</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>pom</packaging>
   <name>maven-lockfile</name>
   <description>Integrity Maven Plugin</description>
+  <url>https://github.com/chains-project/maven-lockfile</url>
+  <inceptionYear>2023</inceptionYear>
+  <licenses>
+    <license>
+      <name>MIT</name>
+      <url>https://opensource.org/licenses/MIT</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+  <developers>
+    <developer>
+      <id>MartinWitt</id>
+      <name>Martin Wittlinger</name>
+    </developer>
+  </developers>
   <modules>
     <module>maven_plugin</module>
     <module>github_action</module>
   </modules>
+  <scm>
+    <connection>scm:git:https://github.com/chains-project/maven-lockfile</connection>
+    <developerConnection>scm:git:https://github.com/chains-project/maven-lockfile.git</developerConnection>
+    <tag>HEAD</tag>
+    <url>https://github.com/chains-project/maven-lockfile.git</url>
+  </scm>
+
   <build>
     <plugins>
       <plugin>
@@ -27,8 +49,8 @@
                 <include>.gitignore</include>
               </includes>
               <!-- define the steps to apply to those files -->
-              <trimTrailingWhitespace></trimTrailingWhitespace>
-              <endWithNewline></endWithNewline>
+              <trimTrailingWhitespace />
+              <endWithNewline />
               <indent>
                 <tabs>true</tabs>
                 <spacesPerTab>4</spacesPerTab>
@@ -37,13 +59,13 @@
           </formats>
           <!-- define a language-specific format -->
           <java>
-            <palantirJavaFormat></palantirJavaFormat>
+            <palantirJavaFormat />
           </java>
           <pom>
             <includes>
               <include>pom.xml</include>
             </includes>
-            <sortPom></sortPom>
+            <sortPom />
           </pom>
         </configuration>
       </plugin>
