--- a/action.yml
+++ b/action.yml
@@ -20,8 +20,10 @@ runs:
       shell: bash
     - run: curl -Ls https://sh.jbang.dev | bash -s - app setup 
       shell: bash
-    - run: ~/.jbang/bin/jbang --repos 'github=https://maven.pkg.github.com/chains-project/maven-lockfile' io.github.chains-project:maven-lockfile-github-action:1.0.0:jar
+    - run: ~/.jbang/bin/jbang --repos 'github=https://maven.pkg.github.com/chains-project/maven-lockfile' io.github.chains-project:maven-lockfile-github-action:1.0.0
       shell: bash
       env:
         JSON_INPUTS: ${{ toJSON(inputs) }} 
         GITHUB_TOKEN: ${{ inputs.github-token }} 
+
+
